Fix ace-editor height jump on load on prod
`.ace_editor` style setting of:

```
font: 12px/normal ...
```

Was overriding my setting. Not sure why this only happened on prod and
not on dev, but in any case ... we know the line-height best :P

--- a/src/components/JsonEditor.css
+++ b/src/components/JsonEditor.css
@@ -19,5 +19,5 @@
   https://github.com/ajaxorg/ace/blob/v1.2.3/lib/ace/layer/font_metrics.js#L151
 */
 .ace_editor {
-  line-height: 20px;
+  line-height: 20px !important;
 }
